Converted dots to a table format to ensure proper spacing

--- a/Anathema3eOnline/anathemaapp/static/anathemaapp/anathema_sheet.css
+++ b/Anathema3eOnline/anathemaapp/static/anathemaapp/anathema_sheet.css
@@ -3,14 +3,11 @@
 	display:inline-block;
 	padding-right:10%;
 }
-.dot-div{
-	display:inline;
-}
+
 [id$="-text"]{
 	display:inline;
 }
 [class$="-dot"]{
-	display:inline;
 	font-size:150%;
 }
 [id$="-dots"]{
